<resources>
    <string name="app_name">FastMart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome_text">Getting Started Now</string>
    <string name="auth_request_text">Create an account or login to explore about our app</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="cpass">Verify Password</string>
    <string name="onboard">Get Started</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="my_details">My Details</string>
    <string name="full_name">Full Name</string>
    <string name="Name">Abdullah Ejaz</string>
    <string name="email_address">Email Address</string>
    <string name="Email_Uni">l230537@lhr.nu.edu.pk</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dob">29/09/2004</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="phone_number">Phone Number</string>
    <string name="Number">+92 345 4967783</string>
    <string name="recommendation_text">Recommended for you</string>
    <string name="deals_of_the_day_text">Deals of the day</string>
    <string name="welcome">Welcome</string>
    <string name="dynamic_microphone_speaker_microphone">Dynamic Microphone, Speaker Microphone</string>
    <string name="r_de_podmic">RØDE PodMic</string>
    <string name="price">$349.99</string>
    <string name="model">Sony Premium Wireless Headphones</string>
    <string name="model_name">Model:WH1000XM4, Black</string>
    <string name="Data_Price">$108.20</string>
    <string name="data_type">Microphones</string>
    <string name="placeholder">     placeholder</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear">clear</string>
    <string name="search">Search</string>
    <string name="search_model">Search Model</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="product_not_found">Product not found</string>
    <string name="search_result">Search Result</string>
    <string name="favourites">Favourites</string>
    <string name="_108_92">$108.92</string>
    <string name="_199_92">$199.92</string>
    <string name="cart">cart</string>
    <string name="shipping">Shipping</string>
    <string name="_0_00">$0.00</string>
    <string name="complete_your_profile">Complete your Profile</string>
    <string name="step_2_of_2">Step 2 of 2</string>
    <string name="account_type">Account Type</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="select_account_type">Select account type</string>
    <string name="country_code_hint">+1</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="residential_address">Residential Address</string>
    <string name="enter_your_residential_address">Enter your residential address</string>
    <string name="terms_and_privacy">I agree to the Terms of Service and Privacy Policy. We use your data to personalize your curated experience.</string>
    <string name="save_profile">Save Profile</string>
    <string name="hello_user">Hello %s</string>
    <string name="total_products">Total Products</string>
    <string name="add_product">Add Product</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>