<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_result"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <!-- Message -->
    <TextView
        android:id="@+id/dialog_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_not_found"
        android:textSize="18sp"
        android:textColor="@color/subtext"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"/>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_no"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/subtext"
            android:text="@string/cancel"
            android:textColor="#564939"
            app:cornerRadius="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_yes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#565353"
            android:text="@string/ok"
            android:textColor="#D9D8D8"
            app:cornerRadius="10dp"/>
    </LinearLayout>

</LinearLayout>