<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:text="@string/welcome"
        android:textSize="45sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deals_of_the_day_text"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:scrollbars="horizontal"
        android:overScrollMode="always"
        android:fadeScrollbars="false"
        android:id="@+id/rvDOTD"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:text="@string/recommendation_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:id="@+id/rvRecom"/>

</LinearLayout>